--- a/src/components/ItemListContainer/styles.css
+++ b/src/components/ItemListContainer/styles.css
@@ -19,15 +19,20 @@ h1{
     text-decoration: underline;
 }
 
-#prend{
-    display: inline-flex;
-    background-color: #fff;
-    color:#000
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 150px;
+    background-color: #000; 
 }
 
-#apag{
-    display: inline-flex;
-    background-color: #000;
-    color:#fff
+footer img{
+    object-fit: contain;
+    width: 300px;
+    margin: 10px 0px 20px 0px;
 }
 
+footer p{
+    color: #fff;
+}
