--- a/src/pages/CharacterDetail/styles.css
+++ b/src/pages/CharacterDetail/styles.css
@@ -1,11 +1,83 @@
 .articulo img{
     object-fit:contain;
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
+    border: 1px solid black;
+    box-shadow: inset;
+    margin: 30px;
+    flex-grow: 1;
+    box-shadow: 5px 3px 10px black;
+    border-radius: 5px;
 }
+
 
 .articulo{
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    padding: 20px 50px;
+}
+
+
+.articulo p {
+    font-size: 20px;
+}
+
+.pys_container{
+    margin: 30px 0px
+}
+
+
+.data_container{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+}
+
+.botones_container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
+}
+
+.botones_container button{
+    border-radius: 10px;
+}
+
+.botones_container .mas{
+    background-color: rgb(59, 221, 59);
+}
+
+.botones_container .mas:hover{
+    background-color: rgb(138, 231, 138);
+}
+
+.botones_container .menos{
+    background-color: rgb(243, 96, 96);
+}
+
+.botones_container .menos:hover{
+    background-color: rgb(243, 162, 162);
+}
+
+.agregar{
+    margin: 50px;
+    font-size: 25px;
+    background-color: aquamarine;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10px;
+}
+.agregar:hover{
+    background-color: rgb(175, 247, 223);
+}
+
+
+.botones_container span{
+    font-size: 40px;
+}
+
+.botones_container button{
+    font-size: 30px;
+    margin: 10px;
 }
